fix: 修复英文页面样式丢失问题（CSS/JS/图片路径改为绝对路径）

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,10 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
 <head>
   <base target="_blank">
 </head>
