--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -12,17 +12,20 @@
           {% for link in site.data.navigation_en.main %}
           <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
-          <li class="masthead__menu-item"><a href="/" title="切换到中文">🇨🇳 中文</a></li>
           {% else %}
           <li class="masthead__menu-item masthead__menu-item--lg masthead__menu-home-item"><a href="#about-me">主页</a>
           </li>
           {% for link in site.data.navigation.main %}
           <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
-          <li class="masthead__menu-item"><a href="/en/" title="Switch to English">🇬🇧 English</a></li>
           {% endif %}
         </ul>
         <ul class="hidden-links hidden"></ul>
+        {% if page.lang == 'en' %}
+        <a href="/" class="lang-switch" title="切换到中文">🇨🇳 中文</a>
+        {% else %}
+        <a href="/en/" class="lang-switch" title="Switch to English">🇬🇧 EN</a>
+        {% endif %}
       </nav>
     </div>
   </div>
