fix: 使用flexbox修复语言切换按钮位置，使其正确显示在导航栏右侧

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -15,9 +15,9 @@
   padding-right: 2em;
   font-family: $sans-serif;
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.30s;
-          animation-delay: 0.30s;
+  animation-delay: 0.30s;
 
   @include breakpoint($large) {
     padding-left: 1em;
@@ -158,10 +158,10 @@
   }
 }
 
-.page__content + .pagination,
-.page__meta + .pagination,
-.page__share + .pagination,
-.page__comments + .pagination {
+.page__content+.pagination,
+.page__meta+.pagination,
+.page__share+.pagination,
+.page__comments+.pagination {
   margin-top: 2em;
   padding-top: 2em;
   border-top: 1px solid $border-color;
@@ -174,6 +174,8 @@
 
 .greedy-nav {
   position: relative;
+  display: flex;
+  align-items: center;
   min-width: 250px;
   background: $background-color;
 
@@ -237,14 +239,16 @@
         -webkit-transition: $global-transition;
         transition: $global-transition;
         -webkit-transform: scaleX(0);
-            -ms-transform: scaleX(0);
-                transform: scaleX(0); /* hide*/
+        -ms-transform: scaleX(0);
+        transform: scaleX(0);
+        /* hide*/
       }
 
       &:hover:before {
         -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-                transform: scaleX(1); /* reveal*/
+        -ms-transform: scaleX(1);
+        transform: scaleX(1);
+        /* reveal*/
       }
     }
   }
@@ -308,10 +312,7 @@
   }
 
   .lang-switch {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
+    margin-left: auto;
     font-size: 0.75rem;
     padding: 0.2rem 0.6rem;
     border: 1px solid $border-color;
@@ -320,7 +321,6 @@
     text-decoration: none;
     white-space: nowrap;
     transition: $global-transition;
-    margin: 0;
 
     &:hover {
       color: $masthead-link-color-hover;
@@ -431,19 +431,19 @@
     }
   }
 
-  > li:last-child {
+  >li:last-child {
     a {
       border-bottom: none;
     }
   }
 
-  li ul > li a {
+  li ul>li a {
     padding-left: 2rem;
     font-weight: normal;
   }
 
   /* hide sub sub links on small screens*/
-  li > ul li {
+  li>ul li {
     display: none;
 
     @include breakpoint($medium) {
