--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -8,9 +8,9 @@
   background-color: white;
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
+  animation-delay: 0.15s;
   z-index: 20;
 
   &__inner-wrap {
@@ -34,6 +34,7 @@
 }
 
 .masthead__menu {
+  position: relative;
 
   ul {
     margin: 0;
@@ -47,6 +48,7 @@
   @include breakpoint($medium) {
     display: block !important;
   }
+
   display: none !important;
 }
 
@@ -60,5 +62,3 @@
     font-weight: 700;
   }
 }
-
-
