--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -320,7 +320,7 @@
   padding: 0.15rem 0.5rem;
   border: 1px solid $border-color;
   border-radius: 1rem;
-  color: $muted-text-color;
+  color: mix(#fff, $text-color, 40%);
   text-decoration: none;
   white-space: nowrap;
   transition: $global-transition;
