--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -25,6 +25,8 @@
 
     nav {
       z-index: 10;
+      flex: 1 1 auto;
+      min-width: 0;
     }
 
     a {
@@ -34,7 +36,9 @@
 }
 
 .masthead__menu {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   ul {
     margin: 0;
